fixed slight misalignment of wide topic header

--- a/app/assets/stylesheets/_wide_topic.css.sass
+++ b/app/assets/stylesheets/_wide_topic.css.sass
@@ -28,8 +28,6 @@ $wl     : (100% - 2 * $ml - $gl) / 2
         size          : 3.0rem
   h1
     @include col(1, 1, 0, 0)
-    padding:
-      left            : 1em
     text:
       align           : center
     font:
